--- a/lovebabbar1.html
+++ b/lovebabbar1.html
@@ -10,6 +10,8 @@
         <fieldset>
             <legend> <H1>HTML FORM </H1></legend>
         <label for="Love"> Enter text</label>
+        <label for="Love"> Enter text</label>
+        
         <input type="text" id="Love" placeholder="Enter there">
         <label for="DOB">Dob</label>
         
